gitea/overlays/kind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  template:
    spec:
      containers:
      - name: gitea
        resources:
          requests:
            cpu: 50m
            memory: 250Mi
