gitea/overlays/kind/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitea
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: gitea-cert
      hosts:
        - gitea.local
  rules:
    - host: gitea.local
      http:
        paths:
          - backend:
              service:
                name: gitea
                port:
                  name: http
            path: /
            pathType: Prefix
